feat(tests, refactor): adicionar testes e refatorar entidades e controladores